Trying to fix some issues with the Flexbox on smaller screens

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -143,7 +143,7 @@ SECTIONS ONE, THREE AND SIX
   align-self: center;
 }
 
-.icons {
+.u-icons, .l-icons {
   background-size: 348px 286px;
   max-height: 286px;
 }
@@ -531,8 +531,12 @@ h3 {
   order: 0;
 }
 
-.icons {
-  margin-left: 30px;
+.u-icons {
+  margin-left: 34px;
+}
+
+.l-icons {
+  margin-left: 20px;
 }
 
 .fb-card {
